--- a/style.css
+++ b/style.css
@@ -101,6 +101,8 @@ img.img-log{
   max-width:600px;
 }
 /*---------------FORMULAIRES-----------------------*/
+/*-------------------------------------------------*/
+/*-----------------global--------------------------*/
 label{
   color:#868686;
 }
@@ -155,6 +157,7 @@ form a:hover{
   border-bottom:1px solid #456b64;
   transition: all .3s ease-out;
 }
+/*--------------------Largeur form 450px ----------------*/
 .card-simple{
   background-color: #fff;
   border: none;
@@ -165,15 +168,8 @@ form a:hover{
   padding: 30px;
   width:450px;
 }
-.card-double{
-  background-color: #fff;
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
-  margin-top: 20px;
-  margin-bottom: 30px;
-  padding: 30px;
-  max-width: 650px;
+.card-simple form{
+  display: grid;
 }
 .no-count{
   display: flex;
@@ -187,8 +183,16 @@ form a:hover{
   justify-content: center;
   padding: 20px 40px;
 }
-.card-simple form{
-  display: grid;
+/*-------------------Largeur form 650px  ---------------*/
+.card-double{
+  background-color: #fff;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
+  margin-top: 20px;
+  margin-bottom: 30px;
+  padding: 30px;
+  max-width: 650px;
 }
 .card-double form{
   display: block;
@@ -246,7 +250,6 @@ nav p{
   display: inline;
   font-size: 15px;
 }
-
 nav i.fas{
   color:#ffffff;
   font-size:30px;
