--- a/style.css
+++ b/style.css
@@ -324,8 +324,9 @@ footer a{
   align-items:flex-start;
   height:auto; 
   background-color: rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, .1);
   border: 2px solid #e5e5e5;
+  margin-top: 10px;
 }
 .part-img-content{
   flex-shrink: 0;
